uploaded demo website

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <link rel="stylesheet" href="https://use.typekit.net/tbk1mgy.css">
     <div class="center">
-        <img id="logo" src="images/cassia_logo@2x.png" alt="Cassia Gray's Logo">
+        <img id="logo" src="images/cassia_logo.png" alt="Cassia Gray's Logo">
         <h1>Hello welcome to my Contact Page.<br>This is an h1 heading.</h1>
         <h2>This is an h2 heading.</h2>
         <p>This is a paragraph, you'll notice it's smaller. </p>
@@ -30,7 +30,7 @@
                 <li><a href="mailto:cgray18@calpoly.edu">Email Me</a></li>
             /ul>
         </nav>
-        
+
     </div> <!--end of center div-->
 
     
