--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <link rel="stylesheet" href="https://use.typekit.net/tbk1mgy.css">
     <div class="center">
-        <img id="logo" src="images/Asset 1.png" width= "528" height= "528" alt="Cassia Gray's Logo">      
+        <img id="logo" src="images/cassia_gray_logo.png" width= "528" height= "528" alt="Cassia Gray's Logo">      
         <h1>Cassia Gray</h1>
 
         <nav>
