Added linkedin personalized link, changed name color, got rid of logo blur

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <link rel="stylesheet" href="https://use.typekit.net/tbk1mgy.css">
     <div class="center">
-        <img id="logo" src="images/cassia_gray_logo.png" width= "528" height= "528" alt="Cassia Gray's Logo">      
+        <img id="logo" src="images/cassia_gray_logo@2x.png" width= "528" height= "528" alt="Cassia Gray's Logo">      
         <h1>Cassia Gray</h1>
 
         <nav>
             <ul>
                 <li><a href="https://www.behance.net">MY WORK</a></li>
-                <li><a href="https://www.linkedin.com">LINKEDIN </a></li>
+                <li><a href="https://www.linkedin.com/in/cassiagray/">LINKEDIN </a></li>
                 <li><a href="mailto:cgray18@calpoly.edu">EMAIL ME</a></li>
             
         </nav>
