Added personal behance link

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <nav>
             <ul>
-                <li><a href="https://www.behance.net">MY WORK</a></li>
+                <li><a href="https://www.behance.net/cassiagray">MY WORK</a></li>
                 <li><a href="https://www.linkedin.com/in/cassiagray/">LINKEDIN </a></li>
-                <li><a href="mailto:cgray18@calpoly.edu">EMAIL ME</a></li>
+                <li><a href="mailto:cassiaegray@gmail.com">EMAIL ME</a></li>
             
         </nav>
 
