--- a/grc338/website-visual-language/index.html
+++ b/grc338/website-visual-language/index.html
@@ -25,10 +25,8 @@
             </header> 
             <main>
             <p class="slogan"> Where sushi is an art and fish is the canvas.</p>
-            <div class="home-address">
-                <address> 123 Sakura Lane, San Luis Obispo, California</address>
-                <address> 805-756-3663 </address>
-            </div>
+            <h3 class="visit"> Visit Us </h3>
+            <p class="address"> 123 Happy Ave, San Luis Obispo, California </p>
             </main>
             <footer>
                 <p> © All rights reserved. Sakana-Suki, 2023. </p>
