--- a/grc338/website-visual-language/website-visual-language/contact.html
+++ b/grc338/website-visual-language/website-visual-language/contact.html
@@ -14,7 +14,7 @@
         <body>
             <div class="container">
             <header>
-                <h1><a href="index.html"><img src="logo.png" alt="Empty Logo"></a></h1>
+                <h1><a href="index.html"><img src="logo.png" alt="An abstract sushi roll made of a circle with lines to look like salmon in orange with another circle around it in black with the words Sakana Suki wrapped around it"></a></h1>
                 <nav> 
                     <ul>
                         <li> <a href="about.html"> About </a> </li>
@@ -23,9 +23,7 @@
                     </ul>
                 </nav>
             </header> 
-            <main>  
-            
-            <article>
+            <main> 
                 <h2> Contact </h2>
                 <figure>
                     <img src="contact.jpeg" alt="An empty sushi restraunt bar made of light wood with set placeholders">
@@ -36,7 +34,6 @@
                 <p> Tuesday–Friday: 11:00am–8:00pm </p>
                 <p> Saturday–Sunday: 12:00pm–9:00pm </p>
                 <p> Closed on Mondays </p>
-            </article>
             </main>
             <footer>
                 </p> © All rights reserved. Sakana-Suki, 2023. </p>
