--- a/grc338/website-visual-language/website-visual-language/about.html
+++ b/grc338/website-visual-language/website-visual-language/about.html
@@ -15,7 +15,7 @@
         <body> 
             <div class="container">
             <header>
-                <h1><a href="index.html"><img src="logo.png" alt="Empty Logo"></a></h1>
+                <h1><a href="index.html"><img src="logo.png" alt="An abstract sushi roll made of a circle with lines to look like salmon in orange with another circle around it in black with the words Sakana Suki wrapped around it"></a></h1>
                 <nav> 
                     <ul>
                         <li class="selected"> <a href="about.html"> About </a> </li>
