--- a/grc338/website-visual-language/website-visual-language/menu.html
+++ b/grc338/website-visual-language/website-visual-language/menu.html
@@ -14,7 +14,7 @@
         <body>  
             <div class="container">
             <header>
-                <h1><a href="index.html"><img src="logo.png" alt="Empty Logo"></a></h1>
+                <h1><a href="index.html"><img src="logo.png" alt="An abstract sushi roll made of a circle with lines to look like salmon in orange with another circle around it in black with the words Sakana Suki wrapped around it"></a></h1>
                 <nav> 
                     <ul>
                         <li> <a href="about.html"> About </a> </li>
@@ -32,7 +32,7 @@
             <ul>
                 <li>
                     <h4> Baked Salmon Belly </h4>
-                    <p class="description"> Fresh salmon belly baked and drizzled with our spicy & creamy sauce </p>
+                    <p class="description"> Fresh salmon belly baked and drizzled with our spicy & creamy sauce</p>
                     <p class="price"> $10.00 </p>
                 </li>
                 <li>
@@ -129,7 +129,7 @@
                 </li>
                 <li>
                     <h4> Sashimi Combo </h4>
-                    <p class="description"> Chef's choice of 15 pieces sashimi served with miso & a salad </p>
+                    <p class="description"> Chef's choice of 15 pieces sashimi served with a side of rice, miso soup & a salad </p>
                     <p class="price"> $35.00 </p>
                 </li>
                 <li>
@@ -139,7 +139,7 @@
                 </li>
                 <li>
                     <h4> Chirashi </h4>
-                    <p class="description"> Assorted sashimi on top of sushi rice with miso & a salad </p>
+                    <p class="description"> Assorted sashimi, vegetables, and egg on top of sushi rice served with miso soup & a salad </p>
                     <p class="price"> $28.00 </p>
                 </li>
                 <li>
