--- a/grc338/website-visual-language/index.html
+++ b/grc338/website-visual-language/index.html
@@ -14,7 +14,7 @@
         <body> 
             <div class="home-container">
             <header>
-                <h1><a href="index.html"><img src="logo.png" alt=" An abstract sushi roll made of a circle with lines to look like salmon in orange with another circle around it in black with the words Sakana Suki wrapped around it"></a></h1>
+                <h1><a href="index.html"><img src="logo.png" alt=" An abstract sushi roll made of a circle with lines to look like salmon in orange with another circle around it in black with the words Sakana Suki to the side of it"></a></h1>
                 <nav> 
                     <ul>
                         <li> <a href="about.html"> About </a> </li>
