--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- You need this to proper scale in actual mobile devices.-->
             <link rel="stylesheet" type="text/css" href="style.css">
-            <title>Please write your name here</title> <!-- This will be replaced with the actual name of the publication later.  -->
+            <title>Cassia Gray</title> <!-- This will be replaced with the actual name of the publication later.  -->
 
             <!-- Helpful meta tags to fight GitHub aggresive caching-->
                 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
