--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -4,7 +4,8 @@
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1" /> <!-- You need this to proper scale in actual mobile devices.-->
             <link rel="stylesheet" type="text/css" href="style.css">
-            <title>Cassia Gray</title> 
+            <link rel="stylesheet" href="https://use.typekit.net/pva1yst.css">
+            <title>Bristles & Clay</title> 
 
             <!-- Helpful meta tags to fight GitHub aggresive caching-->
                 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
@@ -17,16 +18,16 @@
             <div class="home-container">
                 
                 <header>
-                    <h1><a href="index.html"><img src="logo.svg" alt="Wordmark that says Cool Logo"></a></h1>
+                    <h1><a href="index.html"><img src="logo.svg" alt="Wordmark that says Bristles & Clay"></a></h1>
                     <!-- For the nav, you can use the pound sign (#) for the value of the href attribute. -->
 
                     <nav> 
                         <ul>
-                            <li> <a href="#"> Style </a> </li>
-                            <li> <a href="#"> Music </a> </li>
-                            <li> <a href="#"> Wellbeing </a> </li>
-                            <li> <a href="#"> Sports </a> </li>
-                            <li> <a href="#"> Opinion </a> </li>
+                            <li> <a href="#"> History </a> </li>
+                            <li> <a href="#"> A Beginner's Guide </a> </li>
+                            <li> <a href="#"> The Nitty Gritty </a></li>
+                            <li> <a href="#"> Fresh Out the Kiln </a> </li>
+                            <li> <a href="#"> Community </a> </li>
                         </ul>
                     </nav>
                 </header>
@@ -34,57 +35,57 @@
                     <section class="main-story">
                         <a href="mainstory.html">
                             <figure>
-                                <img src="soccer-1.jpg" alt="">
+                                <img src="new-paints.jpeg" alt="pots of pottery glaze being dipped into">
                             </figure>
-                            <h2> Story about soccer </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> New Paints on the Block: Innovations in Pottery Paints </h2>
+                            <p> In the world of handpainted pottery, innovations in paint technology have opened up exciting possibilities for artists. New types of paints and glazes are enhancing creativity, sustainability, and functionality. This article explores the latest developments in pottery paints and how they are revolutionizing the craft.</p> 
                         </a>    
                     </section>
                     
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="dance-1.jpg" alt="">
+                                <img src="mastering-basics.jpeg" alt="kids at a paint pottery lesson">
                             </figure>
-                            <h2> Story about dance </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <h2> Mastering the Basics </h2>
+                            <p> Handpainting pottery is a rewarding and creative craft that allows artists to transform plain ceramic pieces into vibrant, personalized works of art. For those new to this art form, getting started can seem daunting. This guide aims to demystify the process, providing a step-by-step approach to help beginners master the basics. </p>
                         </a>    
                     </section>
 
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="coffee-1.jpg" alt="">
+                                <img src="exploring-traditional-and-modern.jpeg" alt="someone painting a flowerpot">
                             </figure>
-                            <h2> Story about coffee </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <h2> Exploring Traditional and Modern Pottery Painting Techniques </h2>
+                            <p> Handpainting pottery is an art form that has evolved over centuries, incorporating both traditional methods passed down through generations and innovative modern techniques. Understanding these techniques can enrich your craft and inspire new creative directions. Let's explore a blend of traditional and contemporary pottery painting methods.</p>
                         </a>    
                     </section>
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="trees-1.jpg" alt="">
+                                <img src="art-of-glazing.jpeg" alt="dripped ceramic glazed surface">
                             </figure>
-                            <h2> Story about trees </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <h2> The Art of Glazing: A Comprehensive Glaze Key for Potters </h2>
+                            <p> Glazing is an essential step in the pottery process, transforming a painted piece into a finished, durable work of art. Understanding different types of glazes and their applications can enhance the beauty and functionality of your pottery. This comprehensive glaze key will guide you through the various types of glazes, their characteristics, and how to use them effectively. </p>
                         </a>    
                     </section>
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="guitars-1.jpg" alt="">
+                                <img src="community-creations.jpeg" alt="an older couple smiling and painting pottery">
                             </figure>
-                            <h2> Story about guitars </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <h2> Community Creations: How Handpainted Pottery Brings People Together </h2>
+                            <p> Handpainted pottery is more than an art form; it is a powerful tool for building and strengthening communities. From local workshops to large-scale community art projects, the act of creating pottery together fosters connections, encourages creativity, and promotes cultural exchange. This article explores how handpainted pottery brings people together and the positive impacts it has on communities.</p>
                         </a>    
                     </section>
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="cars-1.jpg" alt="">
+                                <img src="eco-friendly.jpeg" alt="glazed ceramic plate with splotched pattern">
                             </figure>
-                            <h2> Story about cars </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <h2> Eco-Friendly Pottery: Sustainable Practices and Materials in Pottery Painting </h2>
+                            <p> As awareness of environmental issues grows, many potters are seeking ways to make their craft more sustainable. Eco-friendly pottery involves using sustainable practices and materials that minimize environmental impact. This article explores various methods and materials for creating eco-friendly handpainted pottery.</p>
                         </a>    
                     </section>
                 </main>
@@ -92,38 +93,38 @@
                 <aside>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about surfing </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> Pottery and Mindfulness: The Therapeutic Benefits of Handpainting Pottery </h2>
+                            <p> Handpainting pottery is not only a creative pursuit but also a therapeutic activity that promotes mindfulness and well-being. Engaging in pottery can provide numerous mental health benefits, offering a form of meditation and stress relief. This article explores the therapeutic benefits of handpainting pottery and how it can enhance mental and emotional well-being.</p> 
                         </a>    
                     </section>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about hiking </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> Ancient Egyptian Ceramic Painting: Mastery of Faience </h2>
+                            <p> Ancient Egypt is renowned for its exquisite faience, a type of ceramic distinguished by its bright, glassy surface. This material, often used for amulets, beads, and small statues, showcases the Egyptians' advanced understanding of materials and techniques.</p> 
                         </a>    
                     </section>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about flowers </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> Exploring the Magic of Holographic Glaze </h2>
+                            <p> In the world of ceramic arts, innovation and tradition often intertwine to create stunning, eye-catching pieces. One such modern innovation is the use of holographic glaze. This unique glaze brings a captivating, iridescent sheen to pottery, making it appear as if it's reflecting light in a spectrum of colors. In this article, we'll explore what holographic glaze is, how it's made, the techniques for applying it, and the impact it's having on the pottery community.</p> 
                         </a>    
                     </section>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about candles </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> A Guide to Choosing and Using Brushes in Pottery Painting </h2>
+                            <p> In the realm of handpainted pottery, brushes are the essential tools that bridge the gap between the artist's vision and the ceramic canvas. From delicate details to bold strokes, the choice of brush can profoundly influence the outcome of a piece. In this article, we delve into the world of ceramic brushes, exploring the different types, qualities, and techniques that define their use in pottery painting.</p> 
                         </a>    
                     </section>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about astronomy </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> The Perfect Canvas: Clay for Handpainting Pottery </h2>
+                            <p> The choice of clay is as critical as the brushstroke itself. Different clays offer distinct qualities that can profoundly impact the outcome of a piece, from its texture and color to its durability and firing characteristics. In this article, we explore some of the best types of clay for handpainting pottery, guiding artists on selecting the perfect canvas for their artistic vision.</p> 
                         </a>    
                     </section>
                     <section class="tertiary-story"> <!-- Teaser for a tertiary story, with no images. You want to give it a third class. -->
                         <a href="#">
-                            <h2> Story about astrology </h2>
-                            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <h2> Glaze Color Considerations for Handpainted Pottery </h2>
+                            <p> Glazes serve as the artist's palette, offering a spectrum of colors and finishes to bring their creations to life. Choosing the right glaze colors is a crucial step in the artistic process, as it can profoundly impact the mood, style, and visual impact of a piece. In this article, we explore key considerations for selecting glaze colors and techniques to enhance the beauty and expressiveness of handpainted pottery.</p> 
                         </a>    
                     </section>
                 </aside>
