--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -28,6 +28,7 @@
                             <li> <a href="#"> The Nitty Gritty </a></li>
                             <li> <a href="#"> Fresh Out the Kiln </a> </li>
                             <li> <a href="#"> Community </a> </li>
+                            <li> <a href="newsletter.html"> Newsletter </a> </li>
                         </ul>
                     </nav>
                 </header>
@@ -40,6 +41,15 @@
                             <h2> New Paints on the Block: Innovations in Pottery Paints </h2>
                             <p> In the world of handpainted pottery, innovations in paint technology have opened up exciting possibilities for artists. New types of paints and glazes are enhancing creativity, sustainability, and functionality. This article explores the latest developments in pottery paints and how they are revolutionizing the craft.</p> 
                         </a>    
+                    </section>
+                    <section class="photo-gallery">
+                        <a href="photogallery.html">
+                            <figure>
+                                <img src="glaze images/cover.jpeg" alt="graphic of Laguna glaze samples and their codes">
+                            </figure>
+                            <h2> Exploring Laguna Glaze Types </h2>
+                            <p> Scroll through a gallery of Laguna glaze samples for some inspiration for your next project. </p>
+                        </a>
                     </section>
                     
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
@@ -128,6 +138,7 @@
                         </a>    
                     </section>
                 </aside>
+                
 
                 <footer>
                     <p>All rights reserved.</p>
