--- a/grc339/digital-magazine/photogallery.html
+++ b/grc339/digital-magazine/photogallery.html
@@ -28,6 +28,7 @@
                             <li> <a href="#"> The Nitty Gritty </a></li>
                             <li> <a href="#"> Fresh Out the Kiln </a> </li>
                             <li> <a href="#"> Community </a> </li>
+                            <li> <a href="newsletter.html"> Newsletter </a> </li>
                         </ul>
                     </nav>
                 </header>
@@ -49,31 +50,31 @@
                                 <figcaption>Crackle in 137 Skye</figcaption>
                             </figure>
                             <figure>
-                                <img src="glaze images/crystal-blossom.jpg" alt="Laguna crystal blossom glaze sample 162 Blue Snowflakes">
+                                <img src="glaze images/crystal-blossom.jpg" alt="Laguna crystal blossom glaze sample 162 Blue Snowflake.">
                                 <figcaption>Crystal blossom in 162 Blue Snowflakes</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/dry-lakes.jpg" alt="Laguna dry lakes glaze sample 109 Hoo Doo Orange" > 
+                                <img src="glaze images/dry-lakes.jpg" alt="Laguna dry lakes glaze sample 109 Hoo Doo Orange." > 
                                 <figcaption>Dry lakes in 109 Hoo Doo Orange</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/dynasty-matte.jpg" alt="Laguna dynasty matte glaze sample 258 Antique Turquoise">
+                                <img src="glaze images/dynasty-matte.jpg" alt="Laguna dynasty matte glaze sample 258 Antique Turquoise.">
                                 <figcaption>Dynasty matte in 258 Antique Turquoise</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/dynasty-textured.jpg" alt="Laguna dynasty textured glaze sample 222 Sang de Boeuf">
+                                <img src="glaze images/dynasty-textured.jpg" alt="Laguna dynasty textured glaze sample 222 Sang de Boeuf.">
                                 <figcaption>Dynasty textured in 222 Sang de Boeuf</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/mystic.jpg" alt="Laguna mystic glaze sample 107 Antique Jade">
+                                <img src="glaze images/mystic.jpg" alt="Laguna mystic glaze sample 107 Antique Jade.">
                                 <figcaption>Mystic in 107 Antique Jade</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/versa5.jpg" alt="Laguna dynasty textured glaze sample 306 Pink">
+                                <img src="glaze images/versa5.jpg" alt="Laguna dynasty textured glaze sample 306 Pink.">
                                 <figcaption>Versa 5 in 306 Pink</figcaption> 
                             </figure>
                             <figure>
-                                <img src="glaze images/silky-underglaze.jpg" alt="Laguna silky underglaze sample 28 Lime">
+                                <img src="glaze images/silky-underglaze.jpg" alt="Laguna silky underglaze sample 28 Lime.">
                                 <figcaption>Silky undergaze in 28 Lime</figcaption> 
                             </figure>
                         </article>
@@ -83,25 +84,25 @@
                                 <img src="glaze images/crackle.jpg" alt="Laguna crackle glaze sample 137 Skye.">
                             </label>
                             <label for="photo2">
-                                <img src="glaze images/crystal-blossom.jpg" alt="Laguna crystal blossom glaze sample 162 Blue Snowflakes">
+                                <img src="glaze images/crystal-blossom.jpg" alt="Laguna crystal blossom glaze sample 162 Blue Snowflakes.">
                             </label>
                             <label for="photo3">
-                                <img src="glaze images/dry-lakes.jpg" alt="Laguna dry lakes glaze sample 109 Hoo Doo Orange" > 
+                                <img src="glaze images/dry-lakes.jpg" alt="Laguna dry lakes glaze sample 109 Hoo Doo Orange." > 
                             </label>
                             <label for="photo4">
-                                <img src="glaze images/dynasty-matte.jpg" alt="Laguna dynasty matte glaze sample 258 Antique Turquoise">
+                                <img src="glaze images/dynasty-matte.jpg" alt="Laguna dynasty matte glaze sample 258 Antique Turquoise.">
                             </label>
                             <label for="photo5">
-                                <img src="glaze images/dynasty-textured.jpg" alt="Laguna dynasty textured glaze sample 222 Sang de Boeuf">
+                                <img src="glaze images/dynasty-textured.jpg" alt="Laguna dynasty textured glaze sample 222 Sang de Boeuf.">
                             </label>
                             <label for="photo6">
-                                <img src="glaze images/mystic.jpg" alt="Laguna mystic glaze sample 107 Antique Jade">
+                                <img src="glaze images/mystic.jpg" alt="Laguna mystic glaze sample 107 Antique Jade.">
                             </label>
                             <label for="photo7">
-                                <img src="glaze images/versa5.jpg" alt="Laguna dynasty textured glaze sample 306 Pink">
+                                <img src="glaze images/versa5.jpg" alt="Laguna dynasty textured glaze sample 306 Pink.">
                             </label>
                             <label for="photo8">
-                                <img src="glaze images/silky-underglaze.jpg" alt="Laguna silky underglaze sample 28 Lime">
+                                <img src="glaze images/silky-underglaze.jpg" alt="Laguna silky underglaze sample 28 Lime.">
                             </label>
                         </nav>                    
                     </main>
