--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -36,7 +36,7 @@
                     <section class="main-story">
                         <a href="mainstory.html">
                             <figure>
-                                <img src="new-paints.jpeg" alt="pots of pottery glaze being dipped into">
+                                <img src="new-paints.jpeg" alt="Pots of pottery glaze being dipped into.">
                             </figure>
                             <h2> New Paints on the Block: Innovations in Pottery Paints </h2>
                             <p> In the world of handpainted pottery, innovations in paint technology have opened up exciting possibilities for artists. New types of paints and glazes are enhancing creativity, sustainability, and functionality. This article explores the latest developments in pottery paints and how they are revolutionizing the craft.</p> 
@@ -45,7 +45,7 @@
                     <section class="photo-gallery">
                         <a href="photogallery.html">
                             <figure>
-                                <img src="glaze images/cover.jpeg" alt="graphic of Laguna glaze samples and their codes">
+                                <img src="glaze images/cover.jpeg" alt="Graphic of Laguna glaze samples and their codes.">
                             </figure>
                             <h2> Exploring Laguna Glaze Types </h2>
                             <p> Scroll through a gallery of Laguna glaze samples for some inspiration for your next project. </p>
@@ -55,7 +55,7 @@
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="mastering-basics.jpeg" alt="kids at a paint pottery lesson">
+                                <img src="mastering-basics.jpeg" alt="Kids at a paint pottery lesson.">
                             </figure>
                             <h2> Mastering the Basics </h2>
                             <p> Handpainting pottery is a rewarding and creative craft that allows artists to transform plain ceramic pieces into vibrant, personalized works of art. For those new to this art form, getting started can seem daunting. This guide aims to demystify the process, providing a step-by-step approach to help beginners master the basics. </p>
@@ -65,7 +65,7 @@
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="exploring-traditional-and-modern.jpeg" alt="someone painting a flowerpot">
+                                <img src="exploring-traditional-and-modern.jpeg" alt="Someone painting a flowerpot.">
                             </figure>
                             <h2> Exploring Traditional and Modern Pottery Painting Techniques </h2>
                             <p> Handpainting pottery is an art form that has evolved over centuries, incorporating both traditional methods passed down through generations and innovative modern techniques. Understanding these techniques can enrich your craft and inspire new creative directions. Let's explore a blend of traditional and contemporary pottery painting methods.</p>
@@ -74,7 +74,7 @@
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="art-of-glazing.jpeg" alt="dripped ceramic glazed surface">
+                                <img src="art-of-glazing.jpeg" alt="Dripped ceramic glazed surface.">
                             </figure>
                             <h2> The Art of Glazing: A Comprehensive Glaze Key for Potters </h2>
                             <p> Glazing is an essential step in the pottery process, transforming a painted piece into a finished, durable work of art. Understanding different types of glazes and their applications can enhance the beauty and functionality of your pottery. This comprehensive glaze key will guide you through the various types of glazes, their characteristics, and how to use them effectively. </p>
@@ -83,16 +83,7 @@
                     <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
                         <a href="#">
                             <figure>
-                                <img src="community-creations.jpeg" alt="an older couple smiling and painting pottery">
-                            </figure>
-                            <h2> Community Creations: How Handpainted Pottery Brings People Together </h2>
-                            <p> Handpainted pottery is more than an art form; it is a powerful tool for building and strengthening communities. From local workshops to large-scale community art projects, the act of creating pottery together fosters connections, encourages creativity, and promotes cultural exchange. This article explores how handpainted pottery brings people together and the positive impacts it has on communities.</p>
-                        </a>    
-                    </section>
-                    <section class="secondary-story"> <!-- Teaser for a secondary story, with images. You want to give it a different class. -->
-                        <a href="#">
-                            <figure>
-                                <img src="eco-friendly.jpeg" alt="glazed ceramic plate with splotched pattern">
+                                <img src="eco-friendly.jpeg" alt="Glazed ceramic plate with splotched pattern.">
                             </figure>
                             <h2> Eco-Friendly Pottery: Sustainable Practices and Materials in Pottery Painting </h2>
                             <p> As awareness of environmental issues grows, many potters are seeking ways to make their craft more sustainable. Eco-friendly pottery involves using sustainable practices and materials that minimize environmental impact. This article explores various methods and materials for creating eco-friendly handpainted pottery.</p>
