--- a/grc339/digital-magazine/newsletter.html
+++ b/grc339/digital-magazine/newsletter.html
@@ -19,7 +19,7 @@
             <div class="container">
                 
                 <header>
-                    <h1><a href="index.html"><img src="logo.svg" alt="Wordmark that says Bristles & Clay"></a></h1>
+                    <h1><a href="index.html"><img src="logo.svg" alt="Wordmark that says Bristles & Clay."></a></h1>
 
                     <nav> 
                         <ul>
